--- a/styles/Learn.module.css
+++ b/styles/Learn.module.css
@@ -32,6 +32,7 @@
      background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
      color: white;
      font-size: 20px;
+     text-align: center;
 }
 
 
