--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -5,8 +5,8 @@
 }
 
 .list{
-  height: 50px;
-  background-color: black;
+  height: 100px;
+  background-color: rgba(0, 0, 0, 0.35);
   color: white;
   display: flex;
   align-items: center;
