--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -18,18 +18,20 @@
 .subtitle {
   font-size: 50px;
   color: black;
+  margin-top: 60px;
 }
 
 .services {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  padding: 0 50px;
 }
 
 .service {
-  width: 350px;
-  height: 350px;
-  margin: 0;
+  width: 460px;
+  height: 460px;
+  margin: 0 10px;
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
   padding: 10px;
   display: flex;
@@ -38,6 +40,7 @@
   position: relative;
   margin-bottom: 50px;
   cursor: pointer;
+
 }
 
 .catInfo {
@@ -50,6 +53,7 @@
   z-index: 999;
   opacity: 1;
   transition: all 1s ease;
+
 }
 
 .cat {
@@ -66,7 +70,6 @@
 .media {
   width: 90%;
   height: 90%;
-  background-color: yellow;
 /*   border-radius: 50%; */
   overflow: hidden;
   transition: all 1s ease;
@@ -90,13 +93,14 @@
   object-fit: cover;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .container {
     padding: 20px;
   }
 
   .services {
     justify-content: center;
+    padding: 0;
   }
 
   .service {
