--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -14,6 +14,24 @@
   flex-direction: column;
   justify-content: space-around;
 }
+.title{
+  z-index: 999;
+  width: 90%;
+  color:white;
+  text-align: center;
+}
+
+.title>h1{
+  font-size: 56px;
+  letter-spacing: 1px;
+  margin-bottom: -10px;
+}
+.title>h3{
+  font-size: 30px;
+  letter-spacing: 1px;
+  font-weight: normal;
+ 
+}
 
 
 @media screen and (max-width: 480px) {
@@ -21,6 +39,10 @@
   .card {
     width: 100%;
     margin-left: 0;
+  }
+  .title{
+    margin-left: -50px;
+    width: 100%;
   }
   
 }
